atualizacao no estilo

--- a/index.html
+++ b/index.html
@@ -52,45 +52,13 @@
     </ul>
   </main>
 
-  <section class="postagens">
-    <h2 class="titulo-postagens">Postagens recentes!</h2>
-
-    <div class="container-postagens">
-      <div class="postagens-recentes">
-        <div class="titulo-post">
-          <h2>Making a design system from scratch</h2>
-        </div>
-        <div class="data-post">
-          <p>12 Feb 2020</p>|<p>Design, Pattern</p>
-        </div>
-        <div class="texto">
-          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim
-          velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-        </div>    
-      </div>
-
-      <div class="postagens-recentes">
-        <div class="titulo-post">
-          <h2>Creating pixel perfect icons in Figma</h2>
-        </div>
-        <div class="data-post">
-          <p>12 Feb 2020</p>|<p>Figma, Icon Design</p>
-        </div>
-        <div class="texto">
-          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-        </div>    
-      </div>
-    </div>
-
-  </section>
-
   <section class="projetos" id="projetos">
     <h2 class="titulo">Meus Projetos</h2>
 
     <div class="container-projetos">
       <div class="projeto ativo">
-        <a href="https://github.com/devemdobro/projeto-listagem-pokemon" target="_blank">
-          <img src="./src/imagens/projeto-listagem-pokemon.png" alt="Projeto listagem de pokemons" />
+        <a href="#" target="_blank">
+          <img src="src/imagens/515x700.png" alt="Capa do projeto" />
           <h3>Projeto 1</h3>
           <div class="informacoes-projeto">
             <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -100,8 +68,8 @@
       </div>
 
       <div class="projeto ativo">
-        <a href="https://github.com/devemdobro/projeto-gta" target="_blank">
-          <img src="./src/imagens/projeto-gta.png" alt="Projeto landing page GTA" />
+        <a href="#" target="_blank">
+          <img src="src/imagens/515x700.png" alt="Capa do projeto" />
           <h3>Projeto 2</h3>
           <div class="informacoes-projeto">
             <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -111,8 +79,8 @@
       </div>
 
       <div class="projeto ativo">
-        <a href="https://github.com/devemdobro/projeto-listagem-pokemon" target="_blank">
-          <img src="./src/imagens/projeto-one-piece.png" alt="Projeto landing page One Piece" />
+        <a href="#" target="_blank">
+          <img src="src/imagens/515x700.png" alt="Capa do projeto" />
           <h3>Projeto 3</h3>
           <div class="informacoes-projeto">
             <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -122,8 +90,8 @@
       </div>
 
       <div class="projeto ativo">
-        <a href="https://github.com/devemdobro/x-men-szpc" target="_blank">
-          <img src="./src/imagens/projeto-x-men.png" alt="Projeto seletor de personagens x-men" />
+        <a href="#" target="_blank">
+          <img src="src/imagens/515x700.png" alt="Capa do projeto" />
           <h3>Projeto 4</h3>
           <div class="informacoes-projeto">
             <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -208,8 +176,8 @@
       </li>
     </ul>
 
-    <section class="contatos">
-      <ul class="contato" id="contato">
+    <section class="contato" id="contato">
+      <ul class="contato">
         <li>
           <a href="link">Contato</a>
         </li>
